<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/addNewWord"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newWord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_margin="16dp"
        android:background="@color/lightgray"
        android:hint="@string/newWord"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/newWordMean"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@color/lightgray"
        android:hint="@string/newWordMean"
        android:importantForAutofill="no"
        android:padding="8dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="16sp"
        android:padding="24dp"
        android:layout_margin="16dp"/>

</LinearLayout>